--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.animatordemo.MainActivity"
     android:orientation="vertical"
-    >
+    tools:context="com.example.animatordemo.MainActivity">
 
     <TextView
-        android:onClick="onClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,9 +22,13 @@
         android:id="@+id/main_icon"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/icon"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center_horizontal"
-        />
+        android:layout_marginTop="100dp"
+        android:src="@drawable/icon" />
+
+    <com.example.animatordemo.MyCircleView
+        android:id="@+id/dd"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
